--- a/package.json
+++ b/package.json
@@ -1,1 +1,14 @@
-
+{
+  "name": "md-roblox-removal",
+  "type": "module",
+  "version": "1.0.0",
+  "main": "server.mjs",
+  "scripts": {
+    "start": "node server.mjs"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "noblox.js": "^6.0.0"
+  }
+}
