--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "md-roblox-removal",
-  "type": "module",
   "version": "1.0.0",
+  "type": "module",
   "main": "server.mjs",
+  "engines": { "node": ">=20" },
   "scripts": {
     "start": "node server.mjs"
   },
