--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "md-roblox-removal",
+  "name": "md-roblox-service",
   "version": "1.0.0",
   "type": "module",
   "main": "server.mjs",
-  "engines": { "node": ">=20" },
   "scripts": {
     "start": "node server.mjs"
   },
+  "engines": {
+    "node": ">=20"
+  },
   "dependencies": {
-    "dotenv": "^16.4.5",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
-    "noblox.js": "^6.0.0"
+    "noblox.js": "^6.0.2"
   }
 }
